<?xml version="1.0"?>
<package format="2">
  <name>osim_msgs</name>
  <version>0.0.1</version>
  <description>Messages for communicating with OSIM</description>
  <maintainer email="tassos.natsakis@aut.utcluj.ro">Tassos Natsakis</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>body_tracker_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
